fix .toList() incompatibillity wtih SDK 27 by changing to .collect(Collectors.toList())